...
        TopBar(
            text = stringResource(id = R.string.account_settings_screen_title),
            navigationIcon = { GoBackButton(onClick = onGoBack) })
      },
      floatingActionButton = {
        FloatingActionButton(
            onClick = onEditRequest, modifier = Modifier.testTag("edit_account_button")) {
              Icon(Icons.Default.Edit, contentDescription = "Edit account")
            }
      }) { paddingValues ->
        Column(
            modifier = Modifier.fillMaxWidth().padding(paddingValues),
            horizontalAlignment = Alignment.CenterHorizontally,
...

              ChimpagneSpacer()
              IconTextButton(
                  onClick = onLogout,
                  text = stringResource(id = R.string.account_logout),
                  icon = Icons.AutoMirrored.Default.Logout,
                  modifier = Modifier.testTag("account_settings_logout_button"))
              ChimpagneSpacer()
              IconTextButton(
                  text = stringResource(id = R.string.delete_account),
                  icon = Icons.Default.Delete,
                  color = MaterialTheme.colorScheme.error,
                  textColor = MaterialTheme.colorScheme.onError,
...
