...
        Text(text.uppercase(Locale.ROOT), style = textStyle.copy(color = textColor))
      }
}

@Composable
fun GoBackButton(onClick: () -> Unit) {
  IconButton(onClick = onClick, modifier = Modifier.testTag("go_back_button")) {
    Icon(
        imageVector = Icons.AutoMirrored.Filled.ArrowBack,
        contentDescription = "Go Back",
        tint = MaterialTheme.colorScheme.onSurface)
  }
}
...
